Basic API client to retrieve top n assets

--- a/CryptoApp.Infrastructure/CryptoApp.Infrastructure.csproj
+++ b/CryptoApp.Infrastructure/CryptoApp.Infrastructure.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\CryptoApp.Core\CryptoApp.Core.csproj" />
+    </ItemGroup>
+
 </Project>
