Implement CryptoService, which transforms api response data into a domain data with help of custom mapper

--- a/CryptoApp.Application/CryptoApp.Application.csproj
+++ b/CryptoApp.Application/CryptoApp.Application.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\CryptoApp.Core\CryptoApp.Core.csproj" />
+      <ProjectReference Include="..\CryptoApp.Infrastructure\CryptoApp.Infrastructure.csproj" />
+    </ItemGroup>
+
 </Project>
