Implement dependency injection container inside of App class

--- a/CryptoApp.Wpf/CryptoApp.Wpf.csproj
+++ b/CryptoApp.Wpf/CryptoApp.Wpf.csproj
@@ -8,4 +8,12 @@
         <UseWPF>true</UseWPF>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\CryptoApp.Application\CryptoApp.Application.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
+    </ItemGroup>
+
 </Project>
