--- a/CryptoApp.Wpf/CryptoApp.Wpf.csproj
+++ b/CryptoApp.Wpf/CryptoApp.Wpf.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
+      <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
     </ItemGroup>
 
 </Project>
