--- a/CryptoApp.Wpf/CryptoApp.Wpf.csproj
+++ b/CryptoApp.Wpf/CryptoApp.Wpf.csproj
@@ -17,4 +17,12 @@
       <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Page Update="Shared\UI\CryptoSearchItem.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
+    </ItemGroup>
+
 </Project>
